syntax = "proto3";

import "google/protobuf/empty.proto";
package helloworld.v1;
option go_package = "user_srv/api/helloworld/v1;v1";

service User{
    rpc GetUserLIst(PageInfo) returns (UserListResponse); // user list
    rpc GetUserMobile(MobileRequest) returns (UserInfoResponse); // search user by mobile
    rpc GetUserById(IdRequest) returns (UserInfoResponse); // search user by id
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); // create user
    rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); // update user
    rpc CheckPassWord(PasswordCheckInfo) returns (CheckResponse); // check password
}

message PasswordCheckInfo{
    string password = 1;
    string encryptedPassword = 2;
  }
  
  message CheckResponse{
    bool success = 1;
  }
  
  message PageInfo{
    uint32 pn = 1;
    uint32 pSize = 2;
  }
  
  message MobileRequest{
    string mobile = 1;
  }
  
  message IdRequest{
    int32 id = 1;
  }
  
  message CreateUserInfo{
    string nickName = 1;
    string passWord = 2;
    string mobile = 3;
  }
  
  message UpdateUserInfo{
    int32 id = 1;
    string nickName = 2;
    string gender = 3;
    uint64 birthday = 4;
  }
  
  message UserInfoResponse{
    int32 id = 1;
    string passWord = 2;
    string mobile = 3;
    string nickName = 4;
    uint64 birthDay = 5;
    string gender = 6;
    int32 role = 7;
  }
  
  message UserListResponse{
    int32 total = 1;
    repeated UserInfoResponse data = 2;
  }